Fix for getLastQuote endpoint